Cleaned suspicious code found with FindBugs.